<resources>
    <string name="app_name">MediMinder</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="_08_00">08:00</string>
    <string name="taken">Taken</string>
    <string name="missed">Missed</string>
    <string name="pending">Pending</string>
    <string name="no_medicines_added_yet_ntap_to_get_started">No medicines added yet.\nTap + to get started!</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="all">All</string>
    <string name="medicine_marked_as_missed">Medicine marked as missed</string>

    <string-array name="instruction_options">
    <item>Before breakfast</item>
    <item>After breakfast</item>
    <item>Before lunch</item>
    <item>After lunch</item>
    <item>Before dinner</item>
    <item>After dinner</item>
    <item>Before sleep</item>
    </string-array>

    <string-array name="repeat_options">
        <item>Do not repeat</item>
        <item>Every day</item>
        <item>Every week</item>
        <item>Every 2 weeks</item>
        <item>Every 3 weeks</item>
        <item>Every month</item>
    </string-array>

</resources>