<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1BEE7">

    <LinearLayout
        android:id="@+id/filterButtonsLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="8dp">

        <Button
            android:id="@+id/btnAll"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all"
            android:backgroundTint="@color/purple_500"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnTaken"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/taken"
            android:backgroundTint="@color/green_600"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnMissed"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/missed"
            android:backgroundTint="@color/red_700"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnPending"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pending"
            android:backgroundTint="@color/blue_700"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/medicineRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="686dp"
        android:layout_above="@id/add_medicine_btn"
        android:layout_below="@id/empty_view"
        android:layout_marginTop="-390dp"
        android:layout_marginBottom="1dp"
        android:clipToPadding="false"
        android:padding="16dp" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/no_medicines_added_yet_ntap_to_get_started"
        android:textColor="#9C27B0"
        android:textSize="16sp"
        android:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_medicine_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="72dp"
        android:contentDescription="@string/add_medicine"
        app:srcCompat="@android:drawable/ic_input_add"
        app:backgroundTint="#673AB7" />

</RelativeLayout>